--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,17 +1,41 @@
 ﻿cmake_minimum_required (VERSION 3.8)
 
+
 # Enable Hot Reload for MSVC compilers if supported.
 if (POLICY CMP0141)
   cmake_policy(SET CMP0141 NEW)
   set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /std:c++17")
 endif()
 
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib") 
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
+
 set(PROJECT_NAME "Physiks")
+set(TEST_NAME "PhysiksTest")
+set(STATICLIB "PhysiksStatic")
+
+enable_testing()
+include(FetchContent)
+FetchContent_Declare(
+  googletest
+  URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
+)
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+FetchContent_MakeAvailable(googletest)
+
+
 project(${PROJECT_NAME})
+
+add_subdirectory(
+	"test"
+)
 
 include_directories(
 	"include"
 	"include/Phyiks"
+
 )
 
 set(SOURCES
@@ -20,7 +44,11 @@ set(SOURCES
 	"include/Physiks/World.cpp"
 )
 
+
+add_library(${STATICLIB} ${SOURCES})
 add_executable(${PROJECT_NAME} ${SOURCES})
+target_link_libraries(${PROJECT_NAME} PRIVATE GTest::gtest_main)
+target_link_libraries(${PROJECT_NAME} PRIVATE ${STATICLIB})
 
 if (CMAKE_VERSION VERSION_GREATER 3.12)
   set_property(TARGET Physiks PROPERTY CXX_STANDARD 20)
